--- a/kube/prod/prod-deployment.yaml
+++ b/kube/prod/prod-deployment.yaml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prod-wbi-app
-  labels:
-    app: wagtail-batteries-included
+  name: wagtail-batteries-included
 spec:
   replicas: 2
   selector:
@@ -32,12 +30,11 @@ spec:
               name: config
           ports:
             - containerPort: 8080
-              name: gunicorn
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc
+  name: wagtail-batteries-included
   labels:
     app: wagtail-batteries-included
 spec:
@@ -47,3 +44,74 @@ spec:
     - port: 8088
       targetPort: 8080
   type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress
+  namespace: wbi
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.tls: "true"
+spec:
+  rules:
+  - host: wbi.fourfridays.com
+    http:
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: wagtail-batteries-included
+              port:
+                number: 8088
+  tls:
+    - hosts:
+        - wbi.fourfridays.com
+      secretName: wbi-tls
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: app-tls
+  annotations:
+    kubernetes.io/ingress.class: traefik
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`wbi.fourfridays.com`)
+      services:
+        - name: wagtail-batteries-included
+          port: 8088
+  tls: # This route uses TLS
+    secretName: wbi-tls
+    domains:
+    - main: wbi.fourfridays.com
+    certResolver: le # Uses our certificate resolver to get a certificate automatically!
+# --- nginx-ingress-deprecated
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: ingress
+#   annotations:
+#     kubernetes.io/ingress.class: "nginx"
+#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+# spec:
+#   tls:
+#   - hosts:
+#     - wbi.fourfridays.com
+#     secretName: wbi-tls
+#   rules:
+#   - host: wbi.fourfridays.com
+#     http:
+#       paths:
+#         - path: /
+#           pathType: Prefix
+#           backend:
+#             service:
+#               name: svc
+#               port:
+#                 number: 8088
