--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,12 @@
-boto3==1.23.3
-Django==4.0.4
-dj-database-url==0.5.0
-django-storage-url==0.8.1
-fontawesomefree==6.1.1
+boto3==1.24.64
+Django==4.1
+django-anymail[mailgun]==8.6
+dj-database-url==1.0.0
+django-storage-url==0.9.0
+fontawesomefree==6.2.0
 gunicorn==20.1.0
-pillow==9.1.1
+pillow==9.2.0
 psycopg2==2.9.3
-wagtail==3.0
-whitenoise==6.1.0
+sentry-sdk==1.9.6
+wagtail==4.0
+whitenoise==6.2.0
