--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    # runs-on: self-hosted
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
