upgraded github actions

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -16,18 +16,18 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: 'master'
 
       - name: 'Set up QEMU'
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
         with:
           platforms: arm64
 
@@ -54,7 +54,7 @@ jobs:
       #     echo "KUBECONFIG=/tmp/.kube/config" >> $GITHUB_ENV
 
       - name: 'Log in to the Container registry'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -62,12 +62,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Cache pip
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           # If the requirements files change, the cache will not hit. 
@@ -76,7 +76,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: 'Build and push'
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           platforms: |-
