--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,13 @@
-boto3==1.26.1
-Django==4.1.3
-django-anymail[mailgun]==8.6
-dj-database-url==1.0.0
-django-storage-url==0.9.2
-django-taggit==3.0.0
-fontawesomefree==6.2.0
-pillow==9.3.0
-psycopg2==2.9.5
-sentry-sdk==1.10.1
-uWSGI==2.0.21
-wagtail==4.1
-whitenoise==6.2.0
+boto3>=1.26.133,<2.0
+Django>=4.2,<4.3
+django-anymail[mailgun]>=10.0,<11.0
+dj-database-url>=2.0,<3.0
+django-storage-url>=0.9.2,<1
+django-taggit>=3.0.0,<5.0
+fontawesomefree>=6.4.0,<7.0
+pillow>=9.5.0,<10.0
+psycopg>=3.1.9,<4.0
+sentry-sdk>=1.22.2,<2.0
+uWSGI>=2.0.21,<2.1
+wagtail>=5.0,<6.0
+whitenoise>=6.4.0,<7.0
