--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -71,6 +71,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11.3'
+          architecture: x64
           cache: 'pip'
 
       - name: 'Build and push'
