--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,7 @@ boto3>=1.26.133,<2.0
 Django>=4.2,<4.3
 django-anymail[mailgun]>=10.0,<11.0
 dj-database-url>=2.0,<3.0
-django-storage-url>=0.9.2,<1
+django-storages>=1.13.2,<2.0
 django-taggit>=3.0.0,<5.0
 fontawesomefree>=6.4.0,<7.0
 pillow>=9.5.0,<10.0
