reverting back to uwsgi

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,12 +69,6 @@ filetype==1.2.0
     # via willow
 fontawesomefree==6.4.0
     # via -r requirements.in
-gevent==22.10.2
-    # via -r requirements.in
-greenlet==2.0.2
-    # via gevent
-gunicorn==20.1.0
-    # via -r requirements.in
 html5lib==1.1
     # via wagtail
 idna==3.4
@@ -131,6 +125,8 @@ urllib3==1.26.15
     #   django-anymail
     #   requests
     #   sentry-sdk
+uwsgi==2.0.21
+    # via -r requirements.in
 wagtail==5.0
     # via -r requirements.in
 webencodings==0.5.1
@@ -139,10 +135,3 @@ whitenoise==6.4.0
     # via -r requirements.in
 willow==1.5
     # via wagtail
-zope-event==4.6
-    # via gevent
-zope-interface==6.0
-    # via gevent
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
