--- a/requirements.in
+++ b/requirements.in
@@ -5,10 +5,9 @@ dj-database-url>=2.0,<3.0
 django-storages>=1.13.2,<2.0
 django-taggit>=3.0.0,<5.0
 fontawesomefree>=6.4.0,<7.0
-gevent>=22.10.2,<23.0
-gunicorn>=20.1.0,<21.0
 pillow>=9.5.0,<10.0
 psycopg>=3.1.9,<4.0
 sentry-sdk>=1.22.2,<2.0
+uWSGI>=2.0.21,<2.1
 wagtail>=5.0,<6.0
 whitenoise>=6.4.0,<7.0
