--- a/kube/prod/prod-deployment.yaml
+++ b/kube/prod/prod-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: wbi
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: wbi
@@ -23,6 +23,9 @@ spec:
       containers:
         - image: ghcr.io/fourfridays/wagtail-batteries-included:latest
           name: wbi
+          resources:
+            limits:
+              memory: 512Mi
           envFrom:
           - secretRef:
               name: secret
