updated labels for GH runner

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: [self-hosted, Linux, x64, wagtail-batteries-included]
     # runs-on: ubuntu-latest
     permissions:
       contents: read
